--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
+    "@types/cors": "^2.8.3",
     "@types/express": "^4.0.39",
     "@types/graphql": "^0.11.6",
     "@types/zen-observable": "^0.5.3",
     "apollo-link": "^1.0.0",
     "apollo-server-express": "^1.2.0",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
     "graphql-playground-middleware-express": "^1.1.2",
