--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-yoga",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "main": "dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
   "files": [
@@ -34,14 +34,15 @@
     "@types/express": "^4.0.39",
     "@types/graphql": "^0.11.6",
     "@types/zen-observable": "^0.5.3",
-    "apollo-link": "^1.0.0",
+    "apollo-link": "^1.0.3",
     "apollo-server-express": "^1.2.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
-    "graphql-playground-middleware-express": "^1.1.2",
+    "graphql-playground-middleware-express": "^1.1.4",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tools": "^2.7.2",
+    "portfinder": "^1.0.13",
     "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
