--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/zen-observable": "^0.5.3",
     "apollo-link": "^1.0.3",
     "apollo-server-express": "^1.2.0",
+    "apollo-upload-server": "^4.0.0-alpha.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
