--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-yoga",
-  "version": "0.3.0-beta3",
+  "version": "0.3.0",
   "main": "dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
   "files": [
@@ -40,7 +40,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
-    "graphql-playground-middleware-express": "^1.3.8-beta.4",
+    "graphql-playground-middleware-express": "^1.3.8",
     "graphql-subscriptions": "^0.5.5",
     "graphql-tools": "^2.13.0",
     "portfinder": "^1.0.13",
