--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-yoga",
-  "version": "0.4.2-beta.1",
+  "version": "0.4.3",
   "main": "dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
   "files": [
