--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: node_js
 node_js:
-  - node
+  - '9'
+  - '8'
+  # - '6'
+
+after_success:
+  - npm i -g semantic-release
+  - semantic-release
+
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
+
 notifications:
   email: false
