--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.12.0",
+    "graphql-import": "^0.1.9",
     "graphql-playground-middleware-express": "^1.3.13",
     "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.14.0",
