--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "apollo-link": "^1.0.7",
     "apollo-server-express": "^1.3.2",
     "apollo-upload-server": "^4.0.0-alpha.1",
+    "body-parser-graphql": "1.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.12.0",
