--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/zen-observable": "^0.5.3",
     "apollo-link": "^1.0.7",
     "apollo-server-express": "^1.3.2",
+    "apollo-server-lambda": "1.3.2",
     "apollo-upload-server": "^4.0.0-alpha.1",
     "body-parser-graphql": "1.0.0",
     "cors": "^2.8.4",
@@ -46,12 +47,14 @@
     "graphql": "^0.12.0",
     "graphql-import": "^0.2.0",
     "graphql-playground-middleware-express": "1.4.3",
+    "graphql-playground-middleware-lambda": "1.3.6",
     "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.16.0",
     "portfinder": "^1.0.13",
     "subscriptions-transport-ws": "^0.9.4"
   },
   "devDependencies": {
+    "@types/aws-lambda": "0.0.26",
     "tslint": "5.8.0",
     "tslint-config-standard": "7.0.0",
     "typescript": "2.6.2"
