fixed lambda handler & added typescript example

--- a/examples/lambda-typescript/package.json
+++ b/examples/lambda-typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lambda",
+  "name": "lambda-typescript",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "serverless": "^1.25.0",
-    "serverless-offline": "^3.16.0"
+    "serverless-offline": "^3.16.0",
+    "serverless-plugin-typescript": "^1.1.5"
   }
 }
