Fulfill `aws-lambda` peerDependency.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "apollo-server-express": "^1.3.2",
     "apollo-server-lambda": "1.3.2",
     "apollo-upload-server": "^4.0.0-alpha.1",
+    "aws-lambda": "^0.1.2",
     "body-parser-graphql": "1.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
