--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "body-parser-graphql": "1.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "graphql": "^0.13.1",
+    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0",
     "graphql-import": "^0.4.4",
     "graphql-playground-middleware-express": "1.5.7",
     "graphql-playground-middleware-lambda": "1.4.3",
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@types/aws-lambda": "0.0.32",
     "tslint": "5.9.1",
-    "tslint-config-prettier": "1.8.0",
+    "tslint-config-prettier": "1.9.0",
     "tslint-config-standard": "7.0.0",
     "typescript": "2.7.2"
   }
