--- a/package.json
+++ b/package.json
@@ -33,10 +33,16 @@
     "branch": "master"
   },
   "dependencies": {
+    "@types/connect": "^3.4.31",
     "@types/cors": "^2.8.3",
     "@types/express": "^4.0.39",
     "@types/graphql": "^0.12.0",
+    "@types/koa": "^2.0.44",
+    "@types/koa-bodyparser": "^4.2.0",
+    "@types/koa-router": "^7.0.27",
+    "@types/restify": "^5.0.7",
     "@types/zen-observable": "^0.5.3",
+    "apollo-engine": "^1.0.1",
     "apollo-server-express": "^1.3.2",
     "apollo-server-lambda": "1.3.2",
     "apollo-upload-server": "^4.0.0-alpha.1",
