--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "rm -rf dist && tsc -d",
-    "lint": "tslint --project tsconfig.json {src,test}/**/*.ts",
+    "lint": "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
+    "format": "prettier --write --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "test": "npm run lint && npm run build"
   },
   "release": {
@@ -54,6 +55,8 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "0.0.33",
+    "prettier": "^1.11.1",
+    "prettier-check": "^2.0.0",
     "tslint": "5.9.1",
     "tslint-config-prettier": "^1.10.0",
     "tslint-config-standard": "7.0.0",
