Update apollo-engine example

--- a/examples/apollo-engine/package.json
+++ b/examples/apollo-engine/package.json
@@ -3,7 +3,7 @@
     "start": "node ."
   },
   "dependencies": {
-    "apollo-engine": "0.8.5",
+    "apollo-engine": "^1.0.1",
     "compression": "1.7.1",
     "graphql-yoga": "1.2.0"
   }
