--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,8 @@
 {
-  "extends": ["config:base"],
+  "extends": [
+    "config:base",
+    "docker:disable"
+  ],
   "pathRules": [
     {
       "paths": ["examples/**"],
