--- a/examples/authentication/express-session/package.json
+++ b/examples/authentication/express-session/package.json
@@ -3,6 +3,9 @@
     "start": "node ."
   },
   "dependencies": {
-    "graphql-yoga": "1.8.5"
+    "graphql-yoga": "1.8.5",
+    "express-session": "^1.15.6",
+    "ms": "^2.1.1",
+    "bcryptjs": "^2.4.3"
   }
 }
