add apollo dependencies

--- a/examples/fullstack-vue/frontend/package.json
+++ b/examples/fullstack-vue/frontend/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-link-http": "^1.5.3",
     "vue": "^2.5.13",
+    "vue-apollo": "^3.0.0-beta.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
