--- a/examples/fullstack-vue/frontend/package.json
+++ b/examples/fullstack-vue/frontend/package.json
@@ -10,6 +10,8 @@
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
     "apollo-link-http": "^1.5.3",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "vue": "^2.5.13",
     "vue-apollo": "^3.0.0-beta.5",
     "vue-router": "^3.0.1",
