--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0",
+    "graphql-deduplicator": "^2.0.1",
     "graphql-import": "^0.5.0",
     "graphql-playground-middleware-express": "1.6.1",
     "graphql-playground-middleware-lambda": "1.5.0",
