--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.16.3",
     "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0",
     "graphql-import": "^0.5.0",
+    "graphql-middleware": "^1.1.0",
     "graphql-playground-middleware-express": "1.6.1",
     "graphql-playground-middleware-lambda": "1.5.0",
     "graphql-subscriptions": "^0.5.8",
