--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/cors": "^2.8.3",
     "@types/express": "^4.11.1",
     "@types/graphql": "^0.13.0",
+    "@types/graphql-deduplicator": "^2.0.0",
     "@types/zen-observable": "^0.5.3",
     "apollo-server-express": "^1.3.4",
     "apollo-server-lambda": "1.3.4",
