--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
   },
   "homepage": "https://github.com/graphcool/graphql-yoga",
   "scripts": {
-    "prepublish": "npm run build",
+    "prepublish": "yarn build",
     "build": "rm -rf dist && tsc -d",
     "lint": "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "format": "prettier --write --ignore-path .gitignore {src,.}/{*.ts,*.js}",
-    "test": "npm run lint && npm run build"
+    "test": "yarn lint && yarn build && ava",
+    "watch:tsc": "tsc --watch",
+    "watch:ava": "ava --watch",
+    "watch": "yarn build && npm-run-all --parallel watch:*"
   },
   "release": {
     "branch": "master"
+  },
+  "ava": {
+    "files": [
+      "dist/**/*.test.js"
+    ]
   },
   "dependencies": {
     "@types/cors": "^2.8.4",
@@ -56,11 +64,17 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.2",
+    "@types/request-promise-native": "^1.0.14",
+    "ava": "^0.25.0",
+    "npm-run-all": "^4.1.2",
     "prettier": "1.12.1",
     "prettier-check": "2.0.0",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.12.0",
     "tslint-config-standard": "7.0.0",
-    "typescript": "2.8.3"
+    "typescript": "2.8.3",
+    "yarn": "^1.6.0"
   }
 }
