--- a/examples/mongodb/package.json
+++ b/examples/mongodb/package.json
@@ -2,7 +2,7 @@
   "name": "yoga-mongodb",
   "version": "0.0.0",
   "description": "GraphQL-YOGA Example with mongodb",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm run test"
   },
@@ -12,5 +12,9 @@
     "mongodb"
   ],
   "author": "Daksh Miglani <hello@dak.sh>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "graphql-yoga": "^1.14.4",
+    "mongoose": "^5.1.2"
+  }
 }
