add babel config

--- a/examples/mongodb/package.json
+++ b/examples/mongodb/package.json
@@ -16,5 +16,10 @@
   "dependencies": {
     "graphql-yoga": "^1.14.4",
     "mongoose": "^5.1.2"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
