basic gql boilerplate.

--- a/examples/mongodb/package.json
+++ b/examples/mongodb/package.json
@@ -4,7 +4,8 @@
   "description": "GraphQL-YOGA Example with mongodb",
   "main": "src/index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "keywords": [
     "gql",
@@ -18,8 +19,10 @@
     "mongoose": "^5.1.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.17.5"
   }
 }
