--- a/examples/lambda-netlify/package.json
+++ b/examples/lambda-netlify/package.json
@@ -9,7 +9,7 @@
     "build": "netlify-lambda build server"
   },
   "dependencies": {
-    "graphql-yoga": "^1.15.0-beta.1"
+    "graphql-yoga": "^1.14.7"
   },
   "devDependencies": {
     "netlify-lambda": "^0.4.0"
