--- a/examples/file-upload/package.json
+++ b/examples/file-upload/package.json
@@ -11,8 +11,8 @@
   },
   "devDependencies": {
     "@types/mkdirp": "0.5.2",
-    "@types/node": "9.4.0",
+    "@types/node": "^9.4.0",
     "ts-node": "4.1.0",
-    "typescript": "2.6.2"
+    "typescript": "^2.6.2"
   }
 }
