--- a/examples/lambda-typescript/package.json
+++ b/examples/lambda-typescript/package.json
@@ -15,8 +15,10 @@
     "graphql-yoga": "*"
   },
   "devDependencies": {
+    "@types/node": "^10.5.2",
     "serverless": "1.25.0",
     "serverless-offline": "3.16.0",
-    "serverless-plugin-typescript": "1.1.5"
+    "serverless-plugin-typescript": "1.1.5",
+    "typescript": "^2.9.2"
   }
 }
