--- a/examples/modular-resolvers/package.json
+++ b/examples/modular-resolvers/package.json
@@ -10,9 +10,9 @@
         "merge-graphql-schemas": "^1.5.0"
     },
     "devDependencies": {
-        "@types/node": "^8.0.29",
+        "@types/node": "^8.10.21",
         "nodemon": "^1.17.1",
         "ts-node": "5.0.1",
-        "typescript": "2.7.2"
+        "typescript": "^2.7.2"
     }
 }
