docs: pin ts example deps

--- a/examples/modular-resolvers/package.json
+++ b/examples/modular-resolvers/package.json
@@ -5,14 +5,14 @@
         "start": "nodemon --exec ts-node index.ts"
     },
     "dependencies": {
-        "graphql": "^0.13.1",
-        "graphql-yoga": "^1.6.1",
-        "merge-graphql-schemas": "^1.5.0"
+        "graphql": "0.13.1",
+        "graphql-yoga": "1.6.1",
+        "merge-graphql-schemas": "1.5.0"
     },
     "devDependencies": {
-        "@types/node": "^8.10.21",
-        "nodemon": "^1.17.1",
+        "@types/node": "8.10.21",
+        "nodemon": "1.17.1",
         "ts-node": "5.0.1",
-        "typescript": "^2.7.2"
+        "typescript": "2.7.2"
     }
 }
