docs: minimal prisma example for js and ts

--- a/examples/prisma-js/package.json
+++ b/examples/prisma-js/package.json
@@ -4,6 +4,7 @@
   "description": "Minimal Prisma example with GraphQL Yoga",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Prisma",
