docs: prisma examples - pin deps

--- a/examples/prisma-js/package.json
+++ b/examples/prisma-js/package.json
@@ -10,7 +10,7 @@
   "author": "Prisma",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.14.12",
-    "prisma-binding": "^2.1.0"
+    "graphql-yoga": "1.14.12",
+    "prisma-binding": "2.1.0"
   }
 }
