fix readme instructions

--- a/examples/typescript-prisma-client/package.json
+++ b/examples/typescript-prisma-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-graphql",
+  "name": "typescript-prisma-client",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
