update lib versions

--- a/examples/typescript-prisma-client/package.json
+++ b/examples/typescript-prisma-client/package.json
@@ -5,14 +5,14 @@
   "license": "MIT",
   "devDependencies": {
     "graphql-resolver-codegen": "0.2.2",
-    "prisma": "1.17.0-beta.11",
+    "prisma": "1.17.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
   "dependencies": {
     "graphql": "^0.13.2",
     "graphql-yoga": "^1.16.1",
-    "prisma-client-lib": "0.2.58"
+    "prisma-client-lib": "^1.17.1"
   },
   "scripts": {
     "prisma": "cd prisma && prisma",
