Adding description to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "graphql-yoga",
+  "description": "Fully-featured GraphQL Server with focus on easy setup, performance & great developer experience",
   "version": "0.0.0-semantic-release",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
