--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/prismagraphql/graphql-yoga.git"
+    "url": "git+https://github.com/prisma/graphql-yoga.git"
   },
   "keywords": [
     "graphql",
@@ -20,9 +20,9 @@
   "author": "Johannes Schickling <johannes@graph.cool>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/prismagraphql/graphql-yoga/issues"
+    "url": "https://github.com/prisma/graphql-yoga/issues"
   },
-  "homepage": "https://github.com/prismagraphql/graphql-yoga",
+  "homepage": "https://github.com/prisma/graphql-yoga",
   "scripts": {
     "prepublish": "yarn build",
     "build": "rm -rf dist && tsc -d",
