--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "files": ["dist/**/*.test.js"]
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.15",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.11.1",
     "@types/graphql": "^14.0.0",
@@ -57,7 +58,6 @@
     "subscriptions-transport-ws": "^0.9.8"
   },
   "devDependencies": {
-    "@types/aws-lambda": "8.10.13",
     "@types/request-promise-native": "1.0.15",
     "ava": "0.25.0",
     "npm-run-all": "4.1.3",
