--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -8,7 +8,7 @@ exemptLabels:
   - security
   - discussion
 # Label to use when marking an issue as stale
-staleLabel: stale
+staleLabel: status/stale
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
   Due to inactivity of this issue we have marked it `stale`. It will be closed if no 
