--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "version": "0.0.0-semantic-release",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prisma/graphql-yoga.git"
   },
-  "keywords": ["graphql", "server", "api", "graphql-server", "apollo"],
+  "keywords": [
+    "graphql",
+    "server",
+    "api",
+    "graphql-server",
+    "apollo"
+  ],
   "author": "Johannes Schickling <johannes@graph.cool>",
   "license": "MIT",
   "bugs": {
@@ -19,8 +27,7 @@
   "scripts": {
     "prepublish": "yarn build",
     "build": "rm -rf dist && tsc -d",
-    "lint":
-      "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
+    "lint": "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "format": "prettier --write --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "test": "yarn lint && yarn build && ava",
     "watch:tsc": "tsc --watch",
@@ -31,7 +38,9 @@
     "branch": "master"
   },
   "ava": {
-    "files": ["dist/**/*.test.js"]
+    "files": [
+      "dist/**/*.test.js"
+    ]
   },
   "dependencies": {
     "@types/cors": "^2.8.4",
@@ -41,7 +50,6 @@
     "@types/zen-observable": "^0.5.3",
     "apollo-server-express": "^1.3.6",
     "apollo-server-lambda": "1.3.6",
-    "apollo-upload-server": "^7.0.0",
     "aws-lambda": "^0.1.2",
     "body-parser-graphql": "1.1.0",
     "cors": "^2.8.4",
@@ -54,6 +62,7 @@
     "graphql-playground-middleware-lambda": "1.7.12",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^4.0.0",
+    "graphql-upload": "^8.0.4",
     "subscriptions-transport-ws": "^0.9.8"
   },
   "devDependencies": {
