--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/zen-observable": "^0.5.3",
     "apollo-server-express": "^1.3.6",
     "apollo-server-lambda": "1.3.6",
-    "apollo-upload-server": "^7.0.0",
+    "graphql-upload": "^8.1.0",
     "body-parser-graphql": "1.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
