update .gitignore file 🐞 ..

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,45 @@
+#       OS        #
+###################
 .DS_Store
+Icon?
+._
+.idea
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+.directory
+*~
+tmp/
+temp/
+
+
+#     Node.js     #
+###################
 node_modules
+package-lock.json
+
+
+#    Coveralls    #
+###################
+coverage
+*.lcov
+.nyc_output
+
+
+#      IDEs       #
+###################
+.idea
+.vscode
+
+#      Prod       #
+###################
 dist
+build
+
+
+#     Others      #
+###################
 examples/**/*.lock
 examples/**/package-lock.json
 examples/**/node_modules
-.idea
 *.log
-.vscode
