--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "version": "0.0.0-semantic-release",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prisma/graphql-yoga.git"
   },
-  "keywords": ["graphql", "server", "api", "graphql-server", "apollo"],
+  "keywords": [
+    "graphql",
+    "server",
+    "api",
+    "graphql-server",
+    "apollo"
+  ],
   "author": "Johannes Schickling <johannes@graph.cool>",
   "license": "MIT",
   "bugs": {
@@ -19,10 +27,10 @@
   "scripts": {
     "prepublish": "yarn build",
     "build": "rm -rf dist && tsc -d",
-    "lint":
-      "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
+    "lint": "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "format": "prettier --write --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "test": "yarn lint && yarn build && ava",
+    "t": "ava",
     "watch:tsc": "tsc --watch",
     "watch:ava": "ava --watch",
     "watch": "yarn build && npm-run-all --parallel watch:*"
@@ -31,45 +39,45 @@
     "branch": "master"
   },
   "ava": {
-    "files": ["dist/**/*.test.js"]
+    "files": [
+      "dist/**/*.test.js"
+    ]
   },
   "dependencies": {
-    "@types/aws-lambda": "8.10.13",
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.11.1",
-    "@types/graphql": "^14.0.0",
+    "@types/aws-lambda": "8.10.51",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
     "@types/graphql-deduplicator": "^2.0.0",
-    "@types/zen-observable": "^0.5.3",
-    "apollo-server-express": "^1.3.6",
-    "apollo-server-lambda": "1.3.6",
-    "apollo-upload-server": "^7.0.0",
+    "@types/zen-observable": "^0.8.0",
+    "apollo-server-express": "^1.4.0",
+    "apollo-server-lambda": "^1.4.0",
     "body-parser-graphql": "1.1.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
-    "graphql-deduplicator": "^2.0.1",
-    "graphql-import": "^0.7.0",
-    "graphql-middleware": "4.0.1",
-    "graphql-playground-middleware-express": "1.7.11",
-    "graphql-playground-middleware-lambda": "1.7.12",
-    "graphql-subscriptions": "^0.5.8",
-    "graphql-tools": "^4.0.0",
-    "graphql-upload": "^8.0.0",
-    "subscriptions-transport-ws": "^0.9.8"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
+    "graphql-deduplicator": "^2.0.5",
+    "graphql-import": "^0.7.1",
+    "graphql-middleware": "4.0.2",
+    "graphql-playground-middleware-express": "1.7.14",
+    "graphql-playground-middleware-lambda": "1.7.15",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^4.0.8",
+    "graphql-upload": "^11.0.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
-    "@types/request-promise-native": "1.0.15",
-    "ava": "0.25.0",
-    "aws-lambda": "^0.1.2",
-    "npm-run-all": "4.1.3",
-    "prettier": "1.12.1",
-    "prettier-check": "2.0.0",
-    "request": "2.88.0",
-    "request-promise-native": "1.0.5",
-    "tslint": "5.11.0",
-    "tslint-config-prettier": "1.12.0",
-    "tslint-config-standard": "7.1.0",
-    "typescript": "3.1.3",
-    "yarn": "1.10.1"
+    "@types/request-promise-native": "^1.0.17",
+    "ava": "^1.4.1",
+    "aws-lambda": "^1.0.6",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
+    "prettier-check": "^2.0.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.9.3",
+    "yarn": "1.22.4"
   }
 }
