--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "version": "0.0.0-semantic-release",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prisma/graphql-yoga.git"
   },
-  "keywords": ["graphql", "server", "api", "graphql-server", "apollo"],
+  "keywords": [
+    "graphql",
+    "server",
+    "api",
+    "graphql-server",
+    "apollo"
+  ],
   "author": "Johannes Schickling <johannes@graph.cool>",
   "license": "MIT",
   "bugs": {
@@ -19,8 +27,7 @@
   "scripts": {
     "prepublish": "yarn build",
     "build": "rm -rf dist && tsc -d",
-    "lint":
-      "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
+    "lint": "tslint --project tsconfig.json {src,test}/**/*.ts && prettier-check --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "format": "prettier --write --ignore-path .gitignore {src,.}/{*.ts,*.js}",
     "test": "yarn lint && yarn build && ava",
     "watch:tsc": "tsc --watch",
@@ -31,7 +38,9 @@
     "branch": "master"
   },
   "ava": {
-    "files": ["dist/**/*.test.js"]
+    "files": [
+      "dist/**/*.test.js"
+    ]
   },
   "dependencies": {
     "@types/aws-lambda": "8.10.13",
@@ -69,7 +78,7 @@
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.12.0",
     "tslint-config-standard": "7.1.0",
-    "typescript": "3.1.3",
+    "typescript": "^3.9.7",
     "yarn": "1.10.1"
   }
 }
