--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@types/request-promise-native": "1.0.15",
-    "ava": "0.25.0",
+    "ava": "^2.4.0",
     "aws-lambda": "^0.1.2",
     "npm-run-all": "4.1.3",
     "prettier": "1.12.1",
