--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "branch": "master"
   },
   "ava": {
-    "files": ["dist/**/*.test.js"]
+    "files": [
+      "dist/**/*.test.js"
+    ]
   },
   "dependencies": {
     "@types/aws-lambda": "8.10.13",
@@ -45,7 +47,7 @@
     "apollo-upload-server": "^7.0.0",
     "body-parser-graphql": "1.1.0",
     "cors": "^2.8.4",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-deduplicator": "^2.0.1",
     "graphql-import": "^0.7.0",
