--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,11 @@ examples/**/package-lock.json
 examples/**/node_modules
 .idea
 *.log
-.vscode
+# https://yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored
+.yarn/*
+.pnp.*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
