--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
-nodeLinker: pnp
 enableGlobalCache: true
+
+nodeLinker: pnp
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: '@yarnpkg/plugin-typescript'
+
 yarnPath: .yarn/releases/yarn-3.0.2.cjs
