--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,13 @@
 enableGlobalCache: true
 
-nodeLinker: pnp
+nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: '@yarnpkg/plugin-typescript'
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: '@yarnpkg/plugin-workspace-tools'
 
 yarnPath: .yarn/releases/yarn-3.0.2.cjs
+
+preferInteractive: true
