--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -39,5 +39,10 @@
   "publishConfig": {
     "directory": "dist",
     "access": "public"
+  },
+  "dependencies": {
+    "@envelop/core": "^1.3.0",
+    "graphql": "^15.6.1",
+    "graphql-helix": "^1.8.3"
   }
 }
