feat: use pino for logging

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,7 +46,9 @@
     "@envelop/disable-introspection": "^1.0.0",
     "@graphql-yoga/handler": "workspace:packages/handler",
     "fastify": "^3.22.1",
-    "graphql": "^15.6.1"
+    "graphql": "^15.6.1",
+    "pino": "^7.0.5",
+    "pino-pretty": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
