build: use workspace package resolution

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -43,8 +43,8 @@
   },
   "dependencies": {
     "@envelop/core": "^1.3.0",
-    "@graphql-yoga/core": "workspace:packages/core",
-    "@graphql-yoga/handler": "workspace:packages/handler",
+    "@graphql-yoga/core": "0.1.0",
+    "@graphql-yoga/handler": "0.1.0",
     "fastify": "^3.22.1",
     "graphql": "^15.6.1",
     "graphql-helix": "^1.8.3",
