make graphql peer dep, no need to rexport and update deps

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -42,17 +42,20 @@
     "access": "public"
   },
   "dependencies": {
-    "@envelop/core": "^1.3.0",
+    "@envelop/core": "^1.6.1",
     "@graphql-yoga/core": "0.1.0",
     "@graphql-yoga/handler": "0.1.0",
-    "fastify": "^3.22.1",
-    "graphql": "^15.6.1",
-    "graphql-helix": "^1.8.3",
-    "pino": "^7.0.5",
-    "pino-pretty": "^7.1.0"
+    "fastify": "^3.23.1",
+    "graphql-helix": "^1.9.1",
+    "pino": "^7.2.0",
+    "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.1",
-    "bob-the-bundler": "^1.5.1"
+    "@types/node": "^16.11.7",
+    "bob-the-bundler": "^1.5.1",
+    "graphql": "^16.0.1"
+  },
+  "peerDependencies": {
+    "graphql": "^15.2.0 || ^16.0.0"
   }
 }
