--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,8 +50,11 @@
     "ts-log": "^2.2.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.1",
+    "@types/node": "^16.11.7",
     "bob-the-bundler": "^1.5.1",
-    "graphql": "^15.6.1"
+    "graphql": "^16.0.1"
+  },
+  "peerDependencies": {
+    "graphql": "^15.2.0 || ^16.0.0"
   }
 }
