--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -15,10 +15,10 @@
   "author": "Saihajpreet Singh <saihajpreet.singh@gmail.com> (https://github.com/saihaj)",
   "license": "MIT",
   "devDependencies": {
-    "@envelop/core": "^1.3.0",
-    "@types/node": "^16.11.1",
+    "@envelop/core": "^1.6.1",
+    "@types/node": "^16.11.7",
     "bob-the-bundler": "^1.5.1",
-    "graphql": "^15.6.1",
+    "graphql": "^16.0.1",
     "typescript": "^4.4.4"
   },
   "buildOptions": {
@@ -43,6 +43,9 @@
     "access": "public"
   },
   "dependencies": {
-    "graphql-helix": "^1.8.3"
+    "graphql-helix": "^1.9.1"
+  },
+  "peerDependencies": {
+    "graphql": "^15.2.0 || ^16.0.0"
   }
 }
