feat: make handler w3c compait

--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -43,7 +43,7 @@
     "access": "public"
   },
   "dependencies": {
-    "graphql-helix": "^1.9.1"
+    "@ardatan/graphql-helix": "^0.0.2"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
