build: update to helix canary

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -42,11 +42,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "^0.0.2",
     "@envelop/core": "^1.6.1",
     "@graphql-yoga/core": "0.1.0",
     "@graphql-yoga/handler": "0.1.0",
     "fastify": "^3.23.1",
+    "graphql-helix": "2.0.0-canary-e8a1707.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
   },
