--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -43,7 +43,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "^0.0.2"
+    "graphql-helix": "2.0.0-canary-e8a1707.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
