--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "format": "prettier . --write",
     "prebuild": "rimraf packages/**/dist",
     "build": "tsc --project tsconfig.json && bob build",
-    "test": "jest"
+    "test": "jest",
+    "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary..."
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@changesets/cli": "2.18.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^27.0.2",
