fixes for workspaces structure

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,7 +46,7 @@
     "@envelop/disable-introspection": "^1.0.0",
     "@envelop/parser-cache": "^2.0.0",
     "@envelop/validation-cache": "^2.0.0",
-    "@graphql-yoga/handler": "0.1.0",
+    "@graphql-yoga/handler": "workspace:*",
     "ts-log": "^2.2.3"
   },
   "devDependencies": {
