--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -43,8 +43,8 @@
   },
   "dependencies": {
     "@envelop/core": "^1.6.1",
-    "@graphql-yoga/core": "0.1.0",
-    "@graphql-yoga/handler": "0.1.0",
+    "@graphql-yoga/core": "workspace:*",
+    "@graphql-yoga/handler": "workspace:*",
     "fastify": "^3.23.1",
     "graphql-helix": "2.0.0-canary-e8a1707.0",
     "pino": "^7.2.0",
