--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "format": "prettier . --write",
     "prebuild": "rimraf packages/**/dist",
     "build": "tsc --project tsconfig.json && bob build",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary..."
   },
   "repository": {
