--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   ],
   "contributors": [
     "Johannes Schickling <johannes@graph.cool>",
-    "Saihajpreet Singh <saihajpreet.singh@gmail.com> (https://github.com/saihaj)"
+    "Saihajpreet Singh <saihajpreet.singh@gmail.com> (https://github.com/saihaj)",
+    "Dotan Simha <dotansimha@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
