--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -47,11 +47,13 @@
     "@graphql-yoga/handler": "workspace:*",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
+    "fastify-multipart": "^5.1.0",
     "graphql-helix": "2.0.0-canary-e8a1707.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
+    "@types/busboy": "^0.3.1",
     "@types/node": "^16.11.7",
     "bob-the-bundler": "^1.5.1",
     "graphql": "^16.0.1"
