use fastify-gql-upload-ts

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -45,10 +45,9 @@
     "@envelop/core": "^1.6.2",
     "@graphql-yoga/core": "workspace:*",
     "@graphql-yoga/handler": "workspace:*",
-    "@types/busboy": "^0.3.1",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
-    "fastify-multipart": "^5.1.0",
+    "fastify-gql-upload-ts": "^1.1.0",
     "graphql-helix": "2.0.0-canary-e8a1707.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
