--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -46,6 +46,7 @@
     "@graphql-yoga/core": "workspace:*",
     "@graphql-yoga/handler": "workspace:*",
     "fastify": "^3.24.0",
+    "fastify-cors": "^6.0.2",
     "graphql-helix": "2.0.0-canary-e8a1707.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
