--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@ardatan/graphql-helix": "0.0.4",
     "@envelop/core": "^1.6.2",
     "@envelop/disable-introspection": "^1.2.1",
     "@envelop/parser-cache": "^2.2.1",
