--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -42,13 +42,13 @@
     "access": "public"
   },
   "dependencies": {
+    "@ardatan/graphql-helix": "0.0.4",
     "@envelop/core": "^1.6.2",
     "@graphql-yoga/core": "workspace:*",
     "@graphql-yoga/handler": "workspace:*",
     "@types/graphql-upload": "^8.0.7",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
-    "graphql-helix": "2.0.0-canary-e8a1707.0",
     "graphql-upload": "^12.0.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
