test: basic tests setup

--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^27.0.2",
+    "@types/supertest": "^2.0.11",
     "babel-jest": "^27.3.1",
     "bob-the-bundler": "^1.5.1",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
+    "supertest": "^6.1.6",
     "typescript": "^4.4.4"
   }
 }
