--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "skipLibCheck": true,
     "paths": {
       "@graphql-yoga/handler": ["packages/handler/src/index.ts"],
-      "@graphql-yoga/core": ["packages/core/src/index.ts"]
+      "@graphql-yoga/core": ["packages/core/src/index.ts"],
+      "graphql-yoga": ["packages/graphql-yoga/src/index.ts"]
     }
   },
   "include": ["packages"],
