--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@ardatan/graphql-helix": "0.0.4",
     "@envelop/core": "^1.6.2",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "workspace:*",
     "@graphql-yoga/handler": "workspace:*",
     "@types/graphql-upload": "^8.0.7",
