--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -47,6 +47,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "workspace:*",
     "@graphql-yoga/handler": "workspace:*",
+    "cross-undici-fetch": "^0.1.4",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
     "pino": "^7.2.0",
