--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "workspaces": [
     "packages/*",
     "examples/hello-world",
+    "examples/fastify",
     "website"
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
@@ -48,7 +49,7 @@
     "@types/supertest": "^2.0.11",
     "babel-jest": "^27.3.1",
     "bob-the-bundler": "^1.5.1",
-    "graphql": "16.1.0",
+    "graphql": "^16.1.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
