--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,7 +42,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "0.0.6",
     "@envelop/core": "^1.6.2",
     "@envelop/disable-introspection": "^1.2.1",
     "@envelop/parser-cache": "^2.2.1",
@@ -53,8 +52,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
-    "bob-the-bundler": "^1.5.1",
-    "graphql": "^16.0.1"
+    "bob-the-bundler": "^1.5.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
