--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -47,9 +47,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.1.0",
     "@graphql-yoga/handler": "0.1.0",
-    "cross-undici-fetch": "^0.1.4",
-    "fastify": "^3.24.0",
-    "fastify-cors": "^6.0.2",
+    "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
   },
