--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -18,7 +18,6 @@
     "@envelop/core": "^1.6.1",
     "@types/node": "^16.11.7",
     "bob-the-bundler": "^1.5.1",
-    "graphql": "^16.0.1",
     "typescript": "^4.4.4"
   },
   "buildOptions": {
@@ -43,7 +42,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "0.0.6"
+    "@ardatan/graphql-helix": "0.0.6",
+    "cross-undici-fetch": "^0.1.4"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
