--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -43,7 +43,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "0.0.6"
+    "@ardatan/graphql-helix": "0.0.6",
+    "@graphql-typed-document-node/core": "^3.1.1",
+    "cross-undici-fetch": "^0.1.4"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
