Next major release (#695)
* chore: remove old infra
* setup yarn 3
* style: run prettier
* update readme
* build: setup bob-the-bundler
* Setup initial core package and agnostic handler packages (#693)
* added alpha releases and ci
* use node 16
* fixes for workspaces structure
* build: update deps
* temporarily allow no tests in CI to pass
* update contribs
* init changeset
* feat: add cors option (#699)
* build: add fastify-cors
* fix: logging level
* temp fix for cors
* use cors option from user
* feat: file uploads (#696)
* replace helix with ardas fork
* feat: allow config option for pino logger (#700)
* feat: allow config option for pino logger
* remove process.exit
* test: basic tests setup (#701)
* test: basic tests setup
* test: use fastif inject
* feat: testing util to simplify setup (#703)
* Bump GraphQL Helix and use fastify's way to handle response (#705)
* feat: remove uploads option
* Use File interface in resolvers, Blob as scalar name and Response as a return type of inject
* chore: downgrade versions will have changeset manage this
* ci: setup releases with changesets

Co-authored-by: Arda TANRIKULU <ardatanrikulu@gmail.com>
Co-authored-by: Dotan Simha <dotansimha@gmail.com>
Co-authored-by: Laurin Quast <laurinquast@googlemail.com>
Co-authored-by: Saihajpreet Singh <saihajpreet.singh@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,14 @@ examples/**/package-lock.json
 examples/**/node_modules
 .idea
 *.log
-.vscode
+# https://yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored
+.yarn/*
+.pnp.*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+*.tsbuildinfo
+coverage/
