Update hello-world example

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "workspaces": [
     "packages/*",
+    "examples/hello-world",
     "website"
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
