--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,8 +1,11 @@
 {
+  "name": "hello-world",
+  "private": true,
   "scripts": {
-    "start": "node ."
+    "start": "node index.js"
   },
   "dependencies": {
-    "graphql-yoga": "1.2.0"
+    "graphql": "16.1.0",
+    "graphql-yoga": "2.0.0-alpha.0"
   }
 }
