Add express example and test

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "workspaces": [
     "packages/*",
     "examples/hello-world",
+    "examples/express",
     "examples/fastify",
     "website"
   ],
