Add missing versions for examples

--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express-example",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
     "start": "ts-node src/index.ts"
   },
