--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fastify-example",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
     "start": "ts-node src/index.ts"
   },
