--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "@changesets/cli": "2.18.1",
+    "@changesets/cli": "2.17.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^27.0.2",
@@ -60,6 +60,7 @@
     "typescript": "^4.4.4"
   },
   "resolutions": {
+    "@changesets/apply-release-plan": "5.0.1",
     "graphql": "16.1.0"
   }
 }
