build: use post-install plugin
Yarn now doesn't run postinstall always as we were use to see it. This package will ensure we run it always.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,7 +7,9 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
-
-yarnPath: .yarn/releases/yarn-3.1.1.cjs
+  - path: .yarn/plugins/@yarnpkg/plugin-postinstall.cjs
+    spec: 'https://raw.githubusercontent.com/gravitywelluk/yarn-plugin-postinstall/master/bundles/%40yarnpkg/plugin-postinstall.js'
 
 preferInteractive: true
+postinstall: yarn run postinstall
+yarnPath: .yarn/releases/yarn-3.1.1.cjs
