--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "graphql-yoga-monorepo",
+  "description": "Cross Platform Spec-compliant GraphQL Server",
+  "private": true,
   "scripts": {
     "format": "prettier . --write",
     "pretty-quick": "pretty-quick --staged",
