--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.17.1",
-    "graphql-yoga": "2.0.0-alpha.0",
+    "graphql-yoga": "1.18.3",
     "supertest": "^6.1.6",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
