--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "fastify": "3.24.1",
-    "graphql-yoga": "2.0.0-alpha.0",
+    "graphql-yoga": "1.18.3",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
   }
