start nextjs example

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "examples/express",
     "examples/fastify",
     "examples/graphql-config",
+    "examples/nextjs",
     "website"
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
