--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -42,7 +42,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "0.0.6",
+    "@ardatan/graphql-helix": "^0.0.8",
     "cross-undici-fetch": "^0.1.4"
   },
   "peerDependencies": {
